bug - import of contract Ids is more robust by removing trailing empty spaces